<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="请输入要查询的图书关键字"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:background="@drawable/ic_action_search"
         />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvNo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NO1" />

        <TextView
            android:id="@+id/tvNo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NO2" />

        <TextView
            android:id="@+id/tvNo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NO3" />

        <TextView
            android:id="@+id/tvNo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NO4" />

        <TextView
            android:id="@+id/tvNo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NO5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:text="@string/last" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:text="@string/next" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="166dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        
            <ImageView
            android:id="@+id/imgBook"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_search" />
            
        </LinearLayout>

        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >
         <TextView
            android:id="@+id/tvBookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title" />
        
        <TextView
            android:id="@+id/tvISBN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ISBN" />
        
        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Author" />
        
        <TextView
            android:id="@+id/tvPress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Press" />
        
        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Price" />
            
        </LinearLayout>
        
       

       
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical" >
        
            <TextView
            android:id="@+id/tvSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Summary" />
            
    </LinearLayout>
    
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical" >
            
            <TextView
            android:id="@+id/tvComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Comment" />
    </LinearLayout>

    

</LinearLayout>
